--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@
   outline: none;
   border: none;
   scroll-behavior: smooth;
-  background-color: var(--back);
 }
 :root {
   --back: #fbf3d5;
   --prim: #d6dac8;
   --text: #9cafaa;
   --tex2: #d6a99d;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: var(--back);
+  color: #ffe4e4;
 }
 .navbar {
   top: 0;
@@ -22,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(30px);
   background-color: transparent;
   padding: 1rem 7%;
   z-index: 1000;
@@ -32,15 +36,17 @@
   font-weight: 700;
   color: var(--text);
   font-family: "pacifico";
+  font-style: italic;
 }
 .navbar .nav-jud span {
   color: var(--tex2);
 }
 
 .navbar .navnav a {
+  font-weight: 600;
   margin: 0 1rem;
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: var(--tex2);
   font-family: "Courier New", Courier, monospace;
 }
@@ -50,4 +56,63 @@
 }
 .navbar .nav-icons a {
   color: var(--text);
+}
+/* AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA */
+.home {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url(img/home4.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.home::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+  background: linear-gradient(
+    0deg,
+    rgb(255, 223, 211) 8%,
+    rgba(255, 223, 211, 0) 40%
+  );
+}
+.home .content {
+  padding: 1.4rem 8%;
+  max-width: 60rem;
+}
+main {
+  display: block;
+  unicode-bidi: isolate;
+}
+.home .content h1 {
+  font-size: 4em;
+  color: var(--tex2);
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1;
+}
+.home .content p {
+  padding-top: 0.6rem;
+  max-width: 30rem;
+  font-size: 1.3rem;
+  line-height: 1.1;
+  font-weight: 300;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+.home .content span {
+  color: var(--text);
+  font-style: italic;
+}
+.home .content .btn {
+  display: inline-block;
+  margin-top: 1rem;
+  padding: 0.7rem 1.5rem;
+  background-color: var(--prim);
+  color: #fff;
+  font-weight: bold;
+  border-radius: 0.8rem;
 }
