--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   scroll-behavior: smooth;
 }
 :root {
-  --back: #fbf3d5;
+  --back: #b2e6f9;
   --prim: #d6dac8;
   --text: #9cafaa;
   --tex2: #d6a99d;
@@ -30,6 +30,7 @@ body {
   background-color: transparent;
   padding: 1rem 7%;
   z-index: 1000;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 .navbar .nav-jud {
   font-size: 2.2rem;
@@ -43,7 +44,7 @@ body {
 }
 
 .navbar .navnav a {
-  font-weight: 600;
+  font-weight: 800;
   margin: 0 1rem;
   display: inline-block;
   font-size: 1.4rem;
@@ -77,7 +78,7 @@ body {
   bottom: 0;
   background: linear-gradient(
     0deg,
-    rgb(255, 223, 211) 8%,
+    rgb(178, 230, 249) 8%,
     rgba(255, 223, 211, 0) 40%
   );
 }
@@ -90,6 +91,7 @@ main {
   unicode-bidi: isolate;
 }
 .home .content h1 {
+  font-family: "Times New Roman", Times, serif;
   font-size: 4em;
   color: var(--tex2);
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
@@ -115,4 +117,44 @@ main {
   color: #fff;
   font-weight: bold;
   border-radius: 0.8rem;
+}
+/* BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB */
+.about {
+  padding: 7rem 8% 1.4rem;
+}
+.about h2 {
+  font-size: 2.5rem;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.about h2 span {
+  color: var(--tex2);
+  font-style: italic;
+}
+.about .about-all {
+  display: flex;
+}
+.about .about-all .about-img {
+  flex: 1 1 45rem;
+}
+.about .about-all .about-img img {
+  width: 70%;
+  margin-left: 5rem;
+  height: 80%;
+}
+.about .about-all .about-text {
+  color: #fff9f9;
+  flex: 1 1 34rem;
+  padding: 0 1.8rem;
+  margin-left: -18rem;
+}
+.about .about-all .about-text h3 {
+  font-size: 1.8rem;
+  color: var(--tex2);
+  margin-bottom: 1rem;
+}
+.about .about-all .about-text p {
+  font-size: 1.2rem;
+  line-height: 1.5;
 }
